@@ -26,6 +26,7 @@ mlUnit development snapshot
   - Lighten recursive_test_run output by setting every failure/error apart by
     a blank line.
   - mlunit_param contains all mlUnit internal parameters by default values.
+  - Provide some verbose output, if requested by new mlUnit parameter.
 
   - Major backend refactoring for easier maintenance, particularly
     by flattening inheritance and by separating concerns, including:
